# NWR_Replication_Algorithm

./: .gitignore  README.md  gitignore
mini3/: CMakeLists.txt  Visualize_metrics.py  config_client.json  config_server1.json  config_server2.json  config_server3.json  config_server4.json  config_server5.json  config_template.json  run_all.sh  strong_scaling_detailed.csv  strong_scaling_results.csv  test_strong_scaling.sh  test_weak_scaling.sh  watch_logs.sh  weak_scaling_results.csv
mini3/configs/distributed_testing_1/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
mini3/configs/local_testing/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
mini3/cpp/: CMakeLists.txt
mini3/cpp/include/: MetricsCollector.h  ReplicationAlgorithm.h  ReplicationManager.h  ScalingTest.h
mini3/cpp/include/proto/: mini2.grpc.pb.cc  mini2.grpc.pb.h  mini2.pb.cc  mini2.pb.h
mini3/cpp/src/: MetricsCollector.cpp  ReplicationAlgorithm.cpp  ReplicationManager.cpp  ScalingTest.cpp  WorkStealler.cpp  client.cpp  metrics_monitor.cpp  scaling_test_main.cpp  server.cpp
mini3/proto/: mini2.grpc.pb.cc  mini2.grpc.pb.h  mini2.pb.cc  mini2.pb.h  mini2.proto
